# claude-config-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORKFLOW.md  example.excalidraw  install-helper.sh  install.sh  remote-install.sh  start-claude-flow.sh  start-monitoring.sh  uninstall.sh
.claude/: settings.json  settings.local.json
.github/: FUNDING.yml
claude-flow/: CLAUDE.md  Makefile  README.md  pyproject.toml
claude-helpers/: .env.claude.example  README.md  build_c4_diagrams.py  fetch-docs.py  fetch_openapi.sh  index_cpp.py  index_go.py  index_js_ts.py  index_python.py  index_ts.py  launch-claude-tab.sh  orchestrator.py  spec_metadata.sh
claude-helpers/claude-flow/: .gitignore  CLAUDE.md  Makefile  README.md  TEMPLATE_VERSION  claude-flow-board-changes-2026-01-06.md  claude-flow.spec  desktop_app.py  finder-env-wrapper.sh  icon.icns  implementation-prompts.md  migrate_to_iterm.py  pyproject.toml  start-claude-flow.sh  test_bundle_paths.py
claude-helpers/claude-flow/scripts/: create_task.sh
claude-helpers/claude-flow/src/kanban/: ai.py  database.py  jobs.py  main.py  models.py  utils.py
claude-helpers/claude-flow/src/kanban/routers/: codebase.py  docs.py  hooks.py  install.py  iterm.py  repos.py  security.py  settings.py  tasks.py  terminal.py
claude-helpers/claude-flow/tests/: __init__.py  conftest.py  test_auto_progression.py  test_docs_router.py  test_security_api.py  test_timezone_handling.py  test_version_endpoint.py
docs/: README-c4-diagrams.md  README-fetch-docs.md  README-fetch-openapi.md  README-indexers.md  (+1 more)
(+103 files in other folders)
